# projekt_1

./: App.cpp  App.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h  Makefile  MyApp  README.md  a.out  app  hello  hello.c  hello.cpp  main.cpp
